# krx_eval

./: Dockerfile  README.md  krx_eval.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
data/: gpt4o_answers.jsonl  ko_eval_financial_accounting.jsonl  ko_eval_financial_accounting_hard.jsonl  ko_eval_financial_market.jsonl  ko_eval_kmmlu_accounting.jsonl  ko_eval_kmmlu_accounting_hard.jsonl
krx_eval/: evaluate_longform.py  evaluate_mcqa.py  generate_response_and_get_bleu.py
tests/: test_sanity.py
