[tool.poetry]
name = "krx_eval"
version = "0.2.0"
description = "evaluation using vllm"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.9"
vllm = "0.6.4"
konlpy = "0.6.0"
nltk = "3.9.1"
litellm = "1.52.14"


[tool.poetry.dev-dependencies]
pytest = "7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
